--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="box">这是测试代码</div>
+    <div class="box">这是修改过后的代码</div>
     <script src="./demo.js"></script>
 </body>
 </html>
